change way image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <div class="about-me">
             <h1 class="description-name">VITALIY NYKONENKO</h1>
             <div class="thumb">
-              <img src="/image/Myphotoblack.jpg" alt="user photo">
+              <img src="image/Myphotoblack.jpg" alt="user photo">
             </div>
           </div>
           
